Fix tracklist dropdown overflow

--- a/src/components/NavDropdown/NavDropdown.module.scss
+++ b/src/components/NavDropdown/NavDropdown.module.scss
@@ -20,8 +20,8 @@
     position: absolute;
     top: 5px;
     bottom: 0;
-    left: 0;
-    right: 0;
+    left: -16px;
+    right: -16px;
     border-top-right-radius: 2px;
     border-top-left-radius: 2px;
     background: $white;
@@ -58,8 +58,8 @@
     border-bottom-left-radius: 2px;
     background: $white;
     top: 0;
-    left: 0;
-    right: 0;
+    left: -16px;
+    right: -16px;
     transform: translate(0, $navbar-height);
     color: $primary;
   }
